--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -81,6 +81,16 @@
             </div>
         </div>
 
+        <div class="dropdown show" id="change-room-master">
+            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Change Room Master
+            </a>
+
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" id="dropdownChangeRoomMaster">
+              <!-- <li class="dropdown-item" data-id="..." href="#">Action</li> -->
+            </div>
+          </div>
+
         <% include layouts/foot %>
         <script type="text/javascript" src="/javascripts/livestream.js"></script>
     </body>
